# Alzheimer-image-classification

./: .gitignore  README.md  main.py  pyproject.toml  step_by_step_implementation.md
configs/: data_config.yaml  model_config.yaml  train_config.yaml
output/: model_summary.txt  results_summary_20250510_132911.txt
src/data/: augmentation.py  balanced_data_loader.py  data_loader.py  preprocessing.py
src/eda/: exploratory_analysis.py
src/evaluation/: evaluate.py
src/models/: model_factory.py  transfer_models.py
src/training/: model_trainer.py
src/utils/: logger.py  visualization.py
