[tool.poetry]
name = "alzheimers-classification"
version = "0.1.0"
description = "Alzheimer MRI classification with ADNI and DenseNet"
authors = ["SKIKRI Hassane <hassaneskikri@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/SkikriHassane01/Alzheimer-image-classification"
packages = [
  { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
tensorflow = "^2.15"
scikit-learn = "^1.2"
opencv-python = "^4.7"
PyYAML = "^6.0"
matplotlib = "^3.6"
Pillow = "^9.5"
[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
ipython = "^8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"